--- a/requirements.txt
+++ b/requirements.txt
@@ -8,71 +8,50 @@ attrs==22.1.0
     # via
     #   cattrs
     #   jsii
-aws-cdk-lib==2.39.1
+autopep8==1.7.0
     # via python-cdk-starter-kit (pyproject.toml)
-build==0.8.0
-    # via pip-tools
+aws-cdk-aws-lambda-python-alpha==2.39.1a0
+    # via python-cdk-starter-kit (pyproject.toml)
+aws-cdk-lib==2.39.1
+    # via
+    #   aws-cdk-aws-lambda-python-alpha
+    #   python-cdk-starter-kit (pyproject.toml)
 cattrs==22.1.0
     # via jsii
-certifi==2022.6.15
-    # via launchdarkly-server-sdk
-click==8.1.3
-    # via pip-tools
 constructs==10.1.92
     # via
+    #   aws-cdk-aws-lambda-python-alpha
     #   aws-cdk-lib
     #   python-cdk-starter-kit (pyproject.toml)
 exceptiongroup==1.0.0rc9
     # via cattrs
-expiringdict==1.2.2
-    # via launchdarkly-server-sdk
 jsii==1.66.0
     # via
+    #   aws-cdk-aws-lambda-python-alpha
     #   aws-cdk-lib
     #   constructs
-launchdarkly-server-sdk==7.5.0
-    # via python-cdk-starter-kit (pyproject.toml)
-packaging==21.3
-    # via build
-pep517==0.13.0
-    # via build
-pip-tools==6.8.0
-    # via python-cdk-starter-kit (pyproject.toml)
+launchdarkly-server-sdk >= 7.5.0
 publication==0.0.3
     # via
+    #   aws-cdk-aws-lambda-python-alpha
     #   aws-cdk-lib
     #   constructs
     #   jsii
-pyparsing==3.0.9
-    # via packaging
-pyrfc3339==1.1
-    # via launchdarkly-server-sdk
+pycodestyle==2.9.1
+    # via autopep8
 python-dateutil==2.8.2
     # via jsii
 python-dotenv==0.20.0
     # via python-cdk-starter-kit (pyproject.toml)
-pytz==2022.2.1
-    # via pyrfc3339
-semver==2.13.0
-    # via launchdarkly-server-sdk
 six==1.16.0
     # via python-dateutil
-tomli==2.0.1
-    # via
-    #   build
-    #   pep517
+toml==0.10.2
+    # via autopep8
 typeguard==2.13.3
     # via
+    #   aws-cdk-aws-lambda-python-alpha
     #   aws-cdk-lib
     #   constructs
     #   jsii
 typing-extensions==4.3.0
     # via jsii
-urllib3==1.26.12
-    # via launchdarkly-server-sdk
-wheel==0.37.1
-    # via pip-tools
-
-# The following packages are considered to be unsafe in a requirements file:
-# pip
-# setuptools
